Fixes mat-card background color on mobile when light theme is selected

--- a/src/app/listing/listing.component.scss
+++ b/src/app/listing/listing.component.scss
@@ -15,6 +15,5 @@ mat-card {
     mat-card {
         margin: 0;
         padding: 0;
-        background-color: #f7f7f7 !important;
     }
 }
